# srcslice-fork

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  build-debug.sh  build-release.sh  build.sh  test.sh  testall.sh
src/: CMakeLists.txt
src/cpp/: FileHelper.cpp  FunctionTable.cpp  SliceProfile.cpp  VariableTable.cpp  output.cpp  srcMLHelper.cpp  srcSlice.cpp  srcSliceHandler.cpp
src/cpp/app/: output.cpp
src/cpp/core/: SliceProfile.cpp  srcSlice.cpp  srcSliceHandler.cpp
src/cpp/helpers/: FileHelper.cpp  StringHelper.cpp  Utility.cpp  srcMLHelper.cpp
src/cpp/tables/: ControlTable.cpp  FunctionTable.cpp  VariableTable.cpp
src/headers/: FunctionTable.h  ProgramPoint.hpp  SliceProfile.hpp  Utility.hpp  VariableTable.h  functional.hpp  srcMLHelper.h  srcSlice.hpp  srcSliceHandler.hpp  srcSliceTypes.h
src/headers/core/: SliceProfile.hpp  srcSlice.hpp  srcSliceHandler.hpp
src/headers/helpers/: FileHelper.h  StringHelper.h  Utility.hpp
src/headers/tables/: ControlTable.h  FunctionTable.h  VariableTable.h
src/headers/types/: ProgramPoint.hpp  srcSliceTypes.h
src/tests/: CMakeLists.txt  FunctionTableTest.cpp  OldTest.cpp  TempTest.cpp  TestApp1.cpp  TestApp3-2.cpp  TestArrayType.cpp  TestConstTypes.cpp  TestDeclSlice.cpp  TestDefUseChain.cpp  TestDotAndMemberAccessSlice.cpp  TestExprSlice.cpp  TestFlatSlice.cpp  TestFlatSlice.hpp  TestFunctionData.cpp  TestGlobal.cpp  TestGlobalIssue3.cpp  TestHelper.cpp  TestHelper.h  TestHelper.hpp  TestIf.cpp  TestIssue16.cpp  TestIssue2.cpp  TestIssue20.cpp  TestIssue29.cpp  TestJson.cpp  TestNonexsistingVariable.cpp  TestPrimitiveTypesSlice.cpp  TestReflexionTest.cpp  TestSortingUnitElement.cpp  TestWhile.cpp
src/tests/basic/: TestApp1.cpp  TestArrayType.cpp  TestConstTypes.cpp  TestDefUseChain.cpp  TestIf.cpp  TestNonexsistingVariable.cpp  TestWhile.cpp
src/tests/helpers/: TestHelper.cpp  TestHelper.hpp
src/tests/issues/: TestGlobalIssue3.cpp  TestIssue16.cpp  TestIssue2.cpp  TestIssue20.cpp  TestIssue29.cpp  TestIssue31.cpp  TestIssue32.cpp  TestIssue36.cpp  TestIssue40.cpp  TestIssue42.cpp
src/tests/old/: TestDeclSlice.cpp  TestDotAndMemberAccessSlice.cpp  TestExprSlice.cpp  TestPrimitiveTypesSlice.cpp
src/tests/samples/: app1.c  array_type_issue14.c  const_types_issue13.c  def_use_chain.c  functions.c  global.c  global_def_use_chain.c  if.c  issue16.c  issue2.c  issue20.c  issue31_global_struct_members.c  issue31_struct_members.c  issue32.c  issue36.c  issue40.c  issue42.c  jamss-app.tar.gz.xml  nonexisting_variable.c  reflexion-test.c  while.c
src/tests/samples/basic/: DeclSlice.cpp  DotAndMemberAccess.cpp  ExprSlice.cpp  FlatSliceOne.cpp
src/tests/unittest/: FunctionTableTest.cpp  TestFunctionData.cpp  TestJson.cpp  TestSortingUnitElement.cpp  VariableTableTest.cpp
testPS/: funcProfSrcSliceTest.cpp  srcSliceTest.cpp
